# search

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deployments.py  docker-compose.yml  env.example  justfile  pyproject.toml  ruff.toml
.claude/skills/vespa-debug/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/test/: action.yml
.github/workflows/: ci.yml  deploy-review-stack.yml  deploy.yml  deploy_api.yml  merge_to_main.yml  prefect_deploy.yml  prefect_deploy_labs.yml  pull_request.yml  pulumi_up.yml  vespa_deploy.yml  vespa_feeder_deploy.yml
.trunk/: trunk.yaml
.trunk/configs/: bandit.yaml  ruff.toml
api/: Dockerfile  README.md  __init__.py  dev.py  justfile  main.py  models.py  routers.py  search_metrics.py  service-manifest.json  types.py  utils.py
api/observability/: pyproject.toml  requirements.txt
dashboards/: README.md  vespa-feeder.json  vespa-search.json
docs/superpowers/plans/: 2026-07-20-fus-48-passage-model-fields.md  2026-07-22-fus-67-followup-page-bounding-boxes.md  2026-07-22-fus-67-populate-pages-multi-page-array.md
docs/superpowers/specs/: 2026-07-22-fus-67-followup-page-bounding-boxes-design.md  2026-07-22-fus-67-populate-pages-multi-page-array-design.md
infra/: Pulumi.production.yaml  Pulumi.review.yaml  Pulumi.yaml  README.md  __main__.py
infra/review-stack-shared-resources/: Pulumi.yaml  __main__.py  pyproject.toml
online_metrics/: online_metrics_flow.py  run_online_metrics.py
prefect/: Dockerfile
relevance_tests/: __init__.py  html_report.py  test_documents.py  test_labels.py  test_passages.py  test_principal_documents.py
research/document_topic_relevance/: FINDINGS.md  PREDICTOR_METRICS.md  README.md  THRESHOLD_TUNING.md  eval_set_selection.sql  evaluate_predictors.py  justfile  load_dataset.py  tune_thresholds.py  vibe_check.html  vibe_check.py
research/document_topic_relevance/data/: threshold_tuning.csv
research/document_topic_relevance/spike_ranking/: FINDINGS.md  README.md  docs.jsonl  documents.sd  feed_and_query.py
research/document_topic_relevance/src/: evaluate.py  models.py  predictors.py  snowflake_client.py  tuning.py
review-stack-shared-resources/: Pulumi.production.yaml
scripts/: README.md  __init__.py  materialize_vespa_updates_from_data_in_api.py  materialize_vespa_updates_from_indexer_input.py  run_online_metrics.py  upload_documents.py  upload_documents_and_passages.py  upload_labels.py  upload_passages.py
scripts/data_uploaders/: upload_documents.py  upload_labels.py  upload_passages.py
scripts/materialize_vespa_updates/: from_data_in_api.py  from_indexer_input.py  from_inference_results.py
scripts/search_debug_clis/: README.md  document_search.py  label_search.py  passage_search.py  principal_search.py
search/: __init__.py  aws.py  config.py  corpora.py  data_in_models.py  date_utils.py  document.py  grafana.py  identifier.py  identifiers.py  label.py  log.py  models.py  passage.py  posthog.py  testcase.py  weights_and_biases.py
search/engines/: __init__.py  dev_vespa.py  duckdb.py  json.py  local_vespa.py  vespa.py
search/online_metrics/: __init__.py  date_utils.py  grafana.py  posthog.py
search/vespa/: concepts_indexer.py  document_indexer.py  document_to_update_operation.py  documents_feed_flow.py  documents_feed_materializer.py  indexer.py  labels_feed.py  labels_feed_flow.py  labels_feed_materializer.py  models.py  passages_feed.py  passages_feed_flow.py  passages_feed_materializer.py
search/vespa/sources/: data_in_api.py  (+4 more)
tests/: README.md  common_strategies.py  conftest.py  test_api_documents.py  test_api_documents_sorting.py  test_api_labels.py  test_api_passages_sorting.py  test_aws.py  test_corpora.py  test_dev_vespa_currency.py  test_dev_vespa_document_sort.py  test_dev_vespa_filters.py  test_document.py  test_duckdb.py  test_dummy.py  test_engine_instance_name.py  test_engines.py  test_git.py  test_label.py  test_main.py  test_passage.py  test_relevance_tests.py  test_vespa_e2e.py  test_vespa_facets_e2e.py  test_vespa_labels_e2e.py  test_vespa_passages_e2e.py  vespa_e2e.py  vespa_test_services.xml  vespa_test_validation_overrides.xml
tests/api/: test_passages_router.py  test_router.py
tests/engines/: __init__.py  conftest.py  test_dev_vespa.py  test_duckdb.py  test_engines.py  test_json.py  test_vespa.py
tests/relevance/: test_labels.py
tests/test_scripts/: conftest.py  test_upload_documents.py  test_upload_labels.py  test_upload_passages.py
tests/vespa/: test_documents_feed_materializer.py  test_labels_feed_materializer.py  test_passages_feed_materializer.py
vespa/: .env.example  README.md  docker-compose.yml  justfile  pyproject.toml
vespa-dev/: Dockerfile  README.md  export_production_snapshot.py  feed_from_production.py  justfile  prefect_deploy.py  pyproject.toml
vespa-feeder/: .env.example  Dockerfile  README.md  deployments.py  docker-compose.yml  feeder_metrics.py  flow.py  justfile  pyproject.toml  service-manifest.json  slack_notify.py  telemetry.py
vespa-feeder/observability/: __init__.py  base_telemetry.py  metrics.py  prefect_telemetry.py  telemetry_utils.py
vespa-feeder/observability/src/: __init__.py
vespa-feeder/src/vespa_feeder/: config.py  flow.py  s3.py  vespa.py
vespa-feeder/tests/: conftest.py  test_flow.py  test_s3.py  test_vespa.py
vespa/app/: deployment.xml  services.xml  validation-overrides.xml
vespa/app/lucene-linguistics/: README.md
vespa/app/lucene-linguistics/en/: geo-synonyms.txt  label-synonyms.txt  passage-synonyms.txt  stopwords.txt  title-synonyms.txt
vespa/app/query-profiles/: default.xml
vespa/app/rules/: documents.sr  labels.sr  passages.sr
vespa/app/schemas/: documents.sd  labels.sd  passages.sd
vespa/app/search/query-profiles/: default.xml
vespa/app/security/: clients.pem  katy.pem  vespa-metrics-reader.pem
vespa/infra/: Pulumi.production.yaml  Pulumi.yaml  Pulumi.yml  __main__.py
vespa/schemas/: documents.sd
vespa/scripts/: build_vespa_updates.py  extract_vespa_updates.py  load_data_in_api.py
(+5 files in other folders)
