[project]
name = "search"
version = "0.1.0"
description = "Tests for measuring the relevance of our search results"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.35.0",
  "duckdb>=1.4.2",
  "fastapi[standard]>=0.136.0",
  "posthog>=7.14.1",
  "prefect>=3.4.25",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.0.0",
  "pyvespa>=0.62.0",
  "requests>=2.32.5",
  "rich>=13.9.4",
  "typer>=0.15.1",
  "uvicorn>=0.32.0",
  "components>=1.0.5",
  "polyfactory>=3.3.0",
  "opentelemetry-api>=1.41.1,<2.0.0",
  "opentelemetry-distro>=0.59b0",
  "opentelemetry-exporter-otlp>=1.38.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.62b1",
  "opentelemetry-instrumentation-logging>=0.59b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.62b1",
  "opentelemetry-sdk>=1.38.0,<2.0.0",
  "opentelemetry-instrumentation-requests>=0.63b1",
  "opentelemetry-instrumentation-httpx>=0.59b0",
  "pyright>=1.1.408",
  "moto>=5.2.0",
  "wandb>=0.27.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
  "pre-commit>=3.5.0",
  "pulumi-aws>=7.28.0,<8.0.0",
  "pulumi-docker>=4.0.0,<5.0.0",
  "pulumi>=3.235.0,<4.0.0",
  "pytest>=9.0.1",
  "ruff>=0.12.9",
  "hypothesis>=6.0.0",
  "boto3-stubs[s3,ssm]>=1.41.5",
]

[tool.uv.sources]
components = { git = "https://github.com/climatepolicyradar/infra", subdirectory = "components", tag = "v1.0.5" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["search"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint."messages control"]
disable = ["logging-fstring-interpolation"] # W1203: allow f-strings in logging

[tool.pylint.'tests/*']
disable = [
  "C0115",
  "C0116", # test function names should be descriptive enough to understand the test's purpose, without always needing a docstring
]

[tool.typos.files]
extend-exclude = ["relevance_tests/*.py"]


[tool.pyright]
venvPath = "."
venv = ".venv"
