[project]
name = "search"
version = "0.1.0"
description = "Tests for measuring the relevance of our search results"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.43.36",
  "duckdb>=1.5.4",
  "fastapi[standard]>=0.138.0",
  "posthog>=7.21.1",
  "prefect[slack]>=3.7.4",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "python-dotenv>=1.2.2",
  "pyvespa>=0.62.0",
  "requests>=2.34.2",
  "rich>=13.9.4",
  "typer>=0.26.8",
  "uvicorn>=0.49.0",
  "components>=1.0.5",
  "polyfactory>=3.3.0",
  "opentelemetry-api>=1.43.0,<2.0.0",
  "opentelemetry-distro>=0.59b0",
  "opentelemetry-exporter-otlp>=1.38.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.62b1",
  "opentelemetry-instrumentation-logging>=0.59b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.62b1",
  "opentelemetry-sdk>=1.38.0,<2.0.0",
  "opentelemetry-instrumentation-requests>=0.59b0",
  "opentelemetry-instrumentation-httpx>=0.59b0",
  "pyright>=1.1.411",
  "moto>=5.2.2",
  "wandb>=0.28.0",
  "pandas>=3.0.4",
  "scikit-learn>=1.9.0",
  "cpr-contracts",
]

[dependency-groups]
research = ["snowflake-connector-python>=4.6.0"]
dev = [
  "pulumi-aws>=7.34.0,<8.0.0",
  "pulumi-docker>=5.1.0,<6.0.0",
  "pulumi-docker-build>=0.0.20,<1.0.0",
  "pulumi-pulumiservice>=1.3.0",
  "pulumi>=3.248.0,<4.0.0",
  "pytest>=9.1.1",
  "hypothesis>=6.155.7",
  "boto3-stubs[s3,ssm]>=1.43.29",
]

[tool.uv.sources]
components = { git = "https://github.com/climatepolicyradar/infra", subdirectory = "components", tag = "v1.0.5" }
cpr-contracts = { git = "https://github.com/climatepolicyradar/contracts", tag = "v0.1.3" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["search"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint."messages control"]
disable = ["logging-fstring-interpolation"] # W1203: allow f-strings in logging

[tool.pylint.'tests/*']
disable = [
  "C0115",
  "C0116", # test function names should be descriptive enough to understand the test's purpose, without always needing a docstring
]

[tool.typos.files]
extend-exclude = ["relevance_tests/*.py"]


[tool.pyright]
venvPath = "."
venv = ".venv"
