[project]
name = "vespa-dev"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = ["boto3", "prefect>=3.7.8", "vespacli==8.719.5"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# No Python packages to bundle — this pyproject.toml exists only to declare
# dependencies so the Dockerfile can install them with uv.
[tool.setuptools]
packages = []
