[project]
name = "vespa-feeder"
version = "0.1.0"
description = "Prefect flow that reads JSONL from S3 and feeds it to a Vespa index"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.35.0",
  "httpx>=0.28.0",
  "orjson>=3.10.0",
  "prefect>=3.4.25",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
  "moto[s3]>=5.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-httpx>=0.35.0",
  "ruff>=0.12.0",
  "boto3-stubs[s3]>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vespa_feeder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
